[workspace]
members = ["derive_action_key", "cli"]
resolver = "2"

[package]
name = "svelte_toolbox"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
svelte_toolbox_derive_action_key = { path = "derive_action_key" }
rand = "0.8"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5.5.3"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-extra = { version = "0.9.3", features = ["cookie"] }
time = "0.3.36"
bincode = "1.3.3"
hex = "0.4.3"

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.11" }
