[package]
name = "objection_cli"
version = "0.7.1"
edition = "2021"
build = false

[[bin]]
name = "objection"
path = "main.rs"

[dependencies]
aho-corasick = "1"
anstyle = "1"
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive", "string"] }
colored = "2"
deno_doc = { git = "ssh://git@github.com/radical-ui/deno_doc", rev = "4e99ed" }
deno_graph = "0.80"
env_logger = "0.11"
log = "0.4"
notify = "6"
notify-debouncer-full = "0.3"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
serde = "1"
serde_json = "1"
str_inflector = "0.12"
syn = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
crossbeam-channel = "0.5"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
hex = "0.4"
sha2 = "0.10"
reqwest = "0.12"
tower-http = { version = "0.5", features = ["fs"] }
tower = { version = "0.4", features = ["util"] }
futures = "0.3"
bytes = { version = "1", features = ["serde"] }
