[package]
name = "dom"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
html5ever = "0.27"
log = "0.4"
markup5ever_arcdom = "0.1"
markup5ever_rcdom = "0.3"
rand = "0.8"
reqwest = "0.12"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
rutils = { git = "ssh://git@github.com/Vehmloewff/rutils.git", rev = "0.3.0" }
