[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "objection_example"
path = "main.rs"

[dependencies]
async_worker = { path = "../async_worker" }
serde = { version = "1", features = ["derive"] }
objection = { path = "../rust_lib" }
dashmap = { version = "6" }
log = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde_json = "1"
anyhow = "1"
env_logger = "0.11"
tower-http = { version = "0.5", features = ["cors"] }
