[package]
name = "objection"
version = "0.8.0"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
body = "0.1"
bytes = "1"
fastwebsockets = { version = "0.8", features = ["upgrade"] }
futures = "0.3"
http = "1"
http-body-util = "0.1"
hyper = "1"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
async_worker = { path = "../async_worker" }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
serde_qs = "0.13"
hyper-util = "0.1"
