[package]
name = "svelte_toolbox_expose_dev"
edition = "2021"

[[bin]]
name = "get_examples"
path = "get_examples.rs"

[[bin]]
name = "get_schema"
path = "get_schema.rs"

[dependencies]
schemars = "0.8"
uuid = { version = "1" }
serde_json = "1"
serde = { version = "1", features = ["derive"]}
svelte_toolbox = { path = "../" }
